Fixed a regression in Lingoes style, adjusted the Expand/Collapse icons to look similar to Lingoes

--- a/article-style-st-lingoes.css
+++ b/article-style-st-lingoes.css
@@ -25,7 +25,9 @@ body
 
 .gdarticle
 {
-  margin-top: -13px;
+  background: #fffef2;
+  margin-top: -8px;
+  position: relative;
 }
 
 .gddicticon
@@ -62,8 +64,38 @@ body
   font-size: 12px;
 }
 
-.gdarticlebody
+.collapse_expand_area
 {
-  display: block;
+  position: absolute;
+  right: 0px;
+}
+
+.gdexpandicon, .gdexpandicon:hover, .gdcollapseicon, .gdcollapseicon:hover
+{
+  background-position: center 35%;
+  background-repeat:no-repeat;
+}
+
+
+.gdexpandicon {
+  background-image: url('qrcx://localhost/icons/expand_article.png');
+}
+
+.gdexpandicon:hover {
+  background-image: url('qrcx://localhost/icons/expand_article_hovered.png');
+}
+
+.gdcollapseicon {
+  background-image: url('qrcx://localhost/icons/collapse_article.png');
+}
+
+.gdcollapseicon:hover {
+  background-image: url('qrcx://localhost/icons/collapse_article_hovered.png');
+}
+
+.gddictnamebodyseparator
+{
+  display: inline-block;
+  width: 100%;
   border-top: 1px solid #92b0dd;
 }
